Project with delete and eidt

--- a/ToDo.Web.Mvc/Views/Item/Index.cshtml
+++ b/ToDo.Web.Mvc/Views/Item/Index.cshtml
@@ -10,21 +10,28 @@
 
 <table id="item" class="table">
     <thead>
-        <tr class="">
-            <th>Descrição</th>
-            <th>Data de criação</th>
-            <th>Status</th>
-        </tr>
+    <tr class="">
+        <th>Descrição</th>
+        <th>Data de criação</th>
+        <th>Status</th>
+        <th>Ações</th>
+    </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Description</td>
-                <td>@item.CreatedAt.ToString("dd/MM/yyyy HH:mm")</td>
-                <td><input type="checkbox" disabled @( item.Done ? "checked" : "" ) action="" /></td>
-            </tr>
-        }
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.Description</td>
+            <td>@item.CreatedAt.ToString("dd/MM/yyyy HH:mm")</td>
+            <td>
+                <input type="checkbox" disabled @(item.Done ? "checked" : "") action=""/>
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+    }
     </tbody>
 </table>
 
